--- a/index.html
+++ b/index.html
@@ -4,8 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>r-p-s main page</title>
+    <link href = "styling.css" rel = "stylesheet">
 </head>
 <body>
+    <div class = "container">
+        <h1 id = "mainheader"> rock paper scissors game</h1>
+        <div class = "buttonscontainer">
+            <button id = rock><img src = "images/rock.png"></button>
+            <button id = "paper"><img src = "images/paper.png"></button>
+            <button id = "scissors"><img src = "images/scissors.png"></button>
+        </div>
+        <div id = "console"></div>
+    </div>
     <script src ="brain.js"></script>
 </body>
 </html>
